<menu xmlns:android="http://schemas.android.com/apk/res/android">
       <item
           android:id="@+id/exit" 
           android:title="@string/exit" 
           android:orderInCategory="2"
           android:showAsAction="ifRoom" 
           android:icon="@drawable/x">          
       </item>
       <item
           android:id="@+id/menu_settings"
           android:title="@string/menu_settings"
           android:orderInCategory="1"
           android:showAsAction="ifRoom"
           android:icon="@drawable/pref"
            />
       <item
           android:id="@+id/menu_help"
           android:title="@string/title_activity_help"
           android:orderInCategory="0"
           android:showAsAction="ifRoom"
           android:icon="@drawable/help_setting"
            />
</menu>
